--- a/tasks/collection/Dockerfile
+++ b/tasks/collection/Dockerfile
@@ -1,5 +1,5 @@
-# Use an official Ubuntu runtime as a parent image
-FROM ubuntu:20.04
+# Use an official Python runtime as a parent image
+FROM python:3.8-slim-buster
 
 # Set the working directory in the container to /app
 WORKDIR /app
@@ -7,19 +7,8 @@ WORKDIR /app
 # Add the current directory contents into the container at /app
 ADD . /app
 
-# Install dependencies
-RUN apt-get update && apt-get install -y \
-	python3 \
-	python3-dev \
-	python3-pip \
-	libxml2-dev \
-	libxslt1-dev \
-	zlib1g-dev \
-	libffi-dev \
-	libssl-dev
+# Install any needed packages specified in requirements.txt
+RUN pip install -r requirements.txt
 
-# Install Scrapy
-RUN pip3 install Scrapy
-
-# Open bash when the container launches
-CMD ["/bin/bash"]
+# Run your script when the container launches
+CMD ["python", "./main.py"]
